# ai-slop-detector-model

./: .gitignore  COLAB.md  Makefile  README.md  pyproject.toml
claude/: claude.md
configs/: baseline.yaml  lora.yaml  roberta.yaml  smoke.yaml
detector/: __init__.py  calibrate.py  config.py  export.py  infer.py  train.py
detector/data/: raid.py  wiki_human_ai.py
detector/eval/: metrics.py  run_eval.py  slices.py
plan/: phase_1.md
scripts/: calibrate.py  eval.py  export.py  infer.py  train.py
tests/: conftest.py  test_calibrate.py  test_config.py  test_data_raid.py  test_data_wiki.py  test_eval_metrics.py  test_eval_slices.py  test_export.py  test_infer.py  test_integration.py  test_train.py
